force-app/main/default/objects/Lead/fields/CountryCode3__c.field-meta.xml
<CustomField>
    <fullName>CountryCode3__c</fullName>
    <label>CountryCode3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>