force-app/main/default/objects/Lead/fields/RegionalBloc__c.field-meta.xml
<CustomField>
    <fullName>RegionalBloc__c</fullName>
    <label>RegionalBloc</label>
    <length>50</length>
    <type>Text</type>
</CustomField>