force-app/main/default/objects/Lead/validationRules/OwnerChangeRule_CustSetting.validationRule-meta.xml
<ValidationRule>
    <fullName>OwnerChangeRule_CustSetting</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISCHANGED(OwnerId),
OR
  (
  ISBLANK(TEXT(LeadSource)) , 
  AND
    (
    $Profile.Name !=  $Setup.LeadValidRuleSettings__c.CountryException__c ,
    ISBLANK(Country) 
    )
  , 
  AND
    (
    $Profile.Name !=  $Setup.LeadValidRuleSettings__c.EmployeeException__c ,
    ISBLANK(NumberOfEmployees) 
    )
  )
)</errorConditionFormula>
    <errorMessage>You can not change Owner due to missing fields</errorMessage>
</ValidationRule>