force-app/main/default/objects/Lead/validationRules/OwnerChangeRule_HardCoded.validationRule-meta.xml
<ValidationRule>
    <fullName>OwnerChangeRule_HardCoded</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISCHANGED(OwnerId),
OR
  (
  ISBLANK(TEXT(LeadSource)) , 
  AND
    (
    $Profile.Name != &apos;System Administrator&apos;,
    ISBLANK(Country) 
    )
  , 
  AND
    (
    $Profile.Name != &apos;Contract Manager&apos;,
    ISBLANK(NumberOfEmployees) 
    )
  )
)</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Owner Change not allowed do to missing fields</errorMessage>
</ValidationRule>